# rook_aoc_2024

./: .gitignore  CMakeLists.txt  README.md  build_run.sh
input/: day_04.test.txt
problem_docs/: Day 1 - Advent of Code 2024.html  Day 2 - Advent of Code 2024.html  Day 3 - Advent of Code 2024.html  Day 4 - Advent of Code 2024.html  Day 5 - Advent of Code 2024.html  Day 6 - Advent of Code 2024.html
problem_docs/Day 1 - Advent of Code 2024_files/: js
problem_docs/Day 2 - Advent of Code 2024_files/: js
src/: day_input.cpp  day_input.hpp  errors.hpp  io_utils.cpp  io_utils.hpp  main.cpp  parse_utils.cpp  parse_utils.hpp  runner.cpp  runner.hpp
src/days/: day_01.cpp  day_01.hpp  day_02.cpp  day_02.hpp  day_03.cpp  day_03.hpp  day_04.cpp  day_04.hpp  day_05.cpp  day_05.hpp  day_06.cpp  day_06.hpp  day_interface.hpp  days.cpp  days.hpp
